--- a/sproduct.html
+++ b/sproduct.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head onload="decide_state()">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body >
+<body onload="decide_state()">
     <section id="header">
         <a href="#">
             <img src="./img/logo.png" class="logo" alt=""></a>
