--- a/cart.html
+++ b/cart.html
@@ -60,7 +60,7 @@
                         Cartoon Astronaut t-shirts
                     </td>
                     <td> $ 118</td>
-                    <td><input type="number" value="1"></td>
+                    <td><input type="number" value="1" min="0"></td>
                     <td>$118</td>
                 </tr>
                 <tr>
@@ -74,7 +74,7 @@
                         Cartoon Astronaut t-shirts
                     </td>
                     <td> $ 118</td>
-                    <td><input type="number" value="1"></td>
+                    <td><input type="number" value="1" min="0"></td>
                     <td>$118</td>
                 </tr>
                 <tr>
@@ -88,7 +88,7 @@
                         Cartoon Astronaut t-shirts
                     </td>
                     <td> $ 118</td>
-                    <td><input type="number" value="1"></td>
+                    <td><input type="number" value="1" min="0"></td>
                     <td>$118</td>
                 </tr>
             </tbody>
