--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         <div id="mobile">
-            <a href=""><i class="fa fa-bag-shopping" ></i></a>
+            <a href="./cart.html"><i class="fa fa-bag-shopping" ></i></a>
             <i id="bar" class="fa-solid fa-bars" onclick="toggle()"></i>
         </div>
     </section>
