--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section id="hero">
         <h4>Trade-in-offer.</h4>
-        <h2>Super value deals</h2>
+        <h2>Super value deals.</h2>
         <h1>On all Products</h1>
         <p>Save more with coupons & up to 70% off! </p>
         <a href="./shop.html"><button>Shop Now</button></a>
