--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./blog.html">Blog</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
                     <li><a class="active" href="./cart.html"><i class="fa fa-bag-shopping" ></i></a></li>
                     <a href="#" id="close"><i class="fa-solid fa-xmark" onclick="toggle()"></i></a>
                 </ul>
